adding property transform for generateuid
Change-Id: Ia2c7f57d36dc83433197ec65d252785c43dec79b

--- a/cst/plugins/eu.esdihumboldt.cst.functions.core/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.core/plugin.xml
@@ -22,6 +22,12 @@
             id="eu.esdihumboldt.cst.functions.core.assign">
       </propertyTransformation>
       <propertyTransformation
+            class="eu.esdihumboldt.cst.functions.core.GenerateUniqueId"
+            engine="eu.esdihumboldt.align.java"
+            function="eu.esdihumboldt.hale.align.generateuid"
+            id="eu.esdihumboldt.cst.functions.core.generateuid">
+      </propertyTransformation>
+      <propertyTransformation
             class="eu.esdihumboldt.cst.functions.core.ClassificationMapping"
             engine="eu.esdihumboldt.align.java"
             function="eu.esdihumboldt.hale.align.classification"
