java implementation of generateuid + testcase working
Change-Id: I77a549edc56a368939f17d773d4064375b73abc5

--- a/cst/plugins/eu.esdihumboldt.cst.functions.core/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.core/plugin.xml
@@ -22,7 +22,7 @@
             id="eu.esdihumboldt.cst.functions.core.assign">
       </propertyTransformation>
       <propertyTransformation
-            class="eu.esdihumboldt.cst.functions.core.GenerateUniqueId"
+            class="eu.esdihumboldt.cst.functions.core.GenerateUID"
             engine="eu.esdihumboldt.align.java"
             function="eu.esdihumboldt.hale.align.generateuid"
             id="eu.esdihumboldt.cst.functions.core.generateuid">
