xslt generateuid transform working
Conflicts:
	ext/xslt/eu.esdihumboldt.hale.io.xslt.test/src/eu/esdihumboldt/hale/io/xslt/XsltTransformationTest.java

Change-Id: If5af3ecb961646a9725817bed535273c3ac693d5

--- a/ext/xslt/eu.esdihumboldt.hale.io.xslt/plugin.xml
+++ b/ext/xslt/eu.esdihumboldt.hale.io.xslt/plugin.xml
@@ -50,6 +50,11 @@
             function="eu.esdihumboldt.cst.functions.numeric.mathexpression"
             id="eu.esdihumboldt.hale.align.mathexpression.xslt">
       </propertyTransformation>
+      <propertyTransformation
+            class="eu.esdihumboldt.hale.io.xslt.transformations.property.XslGenerateUID"
+            function="eu.esdihumboldt.hale.align.generateuid"
+            id="eu.esdihumboldt.hale.align.generateuid.xslt">
+      </propertyTransformation>
    </extension>
 
 </plugin>
