adding saxon home edition
Change-Id: I599fb1d3d344c689d6a4bf7d399b642abff06631

--- a/ext/xslt/eu.esdihumboldt.hale.io.xslt.test/build.properties
+++ b/ext/xslt/eu.esdihumboldt.hale.io.xslt.test/build.properties
@@ -1,7 +1,8 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               lib/saxon9he.jar
 sourceFileExtensions=*.java, *.groovy
 compilerAdapter=org.codehaus.groovy.eclipse.ant.GroovyCompilerAdapter
 compilerAdapter.useLog=true
