added set priority to the UI in alignment editor
Change-Id: If67824d2ece6b1e6c1a5fd14a30a329b25fe90ef

--- a/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
@@ -644,6 +644,36 @@
             </visibleWhen>
          </command>
          <menu
+               label="Set Priority Level">
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="selection">
+                  <and>
+                     <count
+                           value="1">
+                     </count>
+                     <iterate
+                           ifEmpty="false"
+                           operator="and">
+                        <and>
+                           <instanceof
+                                 value="eu.esdihumboldt.hale.common.align.model.Cell">
+                           </instanceof>
+                           <test
+                                 property="eu.esdihumboldt.hale.ui.service.align.cell.allow_remove">
+                           </test>
+                        </and>
+                     </iterate>
+                  </and>
+               </with>
+            </visibleWhen>
+            <dynamic
+                  class="eu.esdihumboldt.hale.ui.function.contribution.SetPriorityContribution"
+                  id="eu.esdihumboldt.hale.ui.cell.setpriority">
+            </dynamic>
+         </menu>
+         <menu
                label="Replace with">
             <visibleWhen
                   checkEnabled="false">
