fix content type detection of old alignments
Change-Id: I74b6b55ef1c9748e6690060e43c7e55cdbf6d6c2
Reviewed-on: http://gerrit.esdi-community.eu/1901
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -301,7 +301,7 @@
             file-extensions="align,xml"
             id="eu.esdihumboldt.hale.io.align.default"
             name="HALE alignment (2.5)"
-            priority="low">
+            priority="normal">
          <describer
                class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber2">
             <parameter
