--- a/ui/plugins/eu.esdihumboldt.hale.ui.lookup/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.lookup/plugin.xml
@@ -12,5 +12,15 @@
             wizard="eu.esdihumboldt.hale.ui.lookup.LookupTableImportWizard">
       </action-ui>
    </extension>
+   <extension
+         point="eu.esdihumboldt.hale.ui.io.config">
+      <configPage
+            class="eu.esdihumboldt.hale.ui.lookup.NameAndDescriptionPage"
+            order="-5">
+         <provider
+               ref="eu.esdihumboldt.hale.io.csv.reader.lookup">
+         </provider>
+      </configPage>
+   </extension>
 
 </plugin>
