Adding LookupTable import
Conflicts:
	io/plugins/eu.esdihumboldt.hale.io.csv.ui/plugin.xml

Change-Id: I258c6ac94179182e805a2d57a884678ad9b34215
Reviewed-on: http://gerrit.esdi-community.eu/1907
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.csv.ui/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.csv.ui/plugin.xml
@@ -19,6 +19,9 @@
          <provider
                ref="eu.esdihumboldt.hale.io.csv.reader.instance">
          </provider>
+         <provider
+               ref="eu.esdihumboldt.hale.io.csv.reader.lookup">
+         </provider>
       </configPage>
       <configPage
             class="eu.esdihumboldt.hale.io.csv.ui.TypeSelectionPage"
@@ -35,6 +38,15 @@
          </provider>
          <provider
                ref="eu.esdihumboldt.hale.io.csv.reader.schema">
+         </provider>
+         <provider
+               ref="eu.esdihumboldt.hale.io.csv.reader.lookup">
+         </provider>
+      <configPage
+            class="eu.esdihumboldt.hale.io.csv.ui.LookupTablePage"
+            order="-4">
+         <provider
+               ref="eu.esdihumboldt.hale.io.csv.reader.lookup">
          </provider>
       </configPage>
    </extension>
