added configuration page for character set
Enabled for Shapefile instance reader

refs #548

Change-Id: I46cb15373088e48122e4c3077128f6c3597e603e

--- a/io/plugins/eu.esdihumboldt.hale.io.shp.ui/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.shp.ui/plugin.xml
@@ -10,6 +10,13 @@
                ref="eu.esdihumboldt.hale.io.shape.reader.instance">
          </provider>
       </configPage>
+      <configPage
+            class="eu.esdihumboldt.hale.ui.io.config.CharsetConfigurationPage"
+            order="1">
+         <provider
+               ref="eu.esdihumboldt.hale.io.shape.reader.instance">
+         </provider>
+      </configPage>
    </extension>
 
 </plugin>
