character set support for reading CSV files
refs #548

Change-Id: I53770613d834de04707b88bc40c47bfa960e63d0
Reviewed-on: http://gerrit.esdi-community.eu/1919
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.csv.ui/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.csv.ui/plugin.xml
@@ -27,6 +27,16 @@
                ref="eu.esdihumboldt.hale.io.csv.reader.instance">
          </provider>
       </configPage>
+      <configPage
+            class="eu.esdihumboldt.hale.ui.io.config.CharsetConfigurationPage"
+            order="-15">
+         <provider
+               ref="eu.esdihumboldt.hale.io.csv.reader.instance">
+         </provider>
+         <provider
+               ref="eu.esdihumboldt.hale.io.csv.reader.schema">
+         </provider>
+      </configPage>
    </extension>
 
 </plugin>
