added charset configuration pages with encoding detection
...performed on the ImportProvider input stream.
Enabled for CSV import.

refs #548

Change-Id: Ie096dfb1605227be47ae74e359591f53ddba8282

--- a/io/plugins/eu.esdihumboldt.hale.io.csv.ui/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.csv.ui/plugin.xml
@@ -28,7 +28,7 @@
          </provider>
       </configPage>
       <configPage
-            class="eu.esdihumboldt.hale.ui.io.config.CharsetConfigurationPage"
+            class="eu.esdihumboldt.hale.ui.io.config.AutoDetectCharsetPage"
             order="-15">
          <provider
                ref="eu.esdihumboldt.hale.io.csv.reader.instance">
