fixed error in plugin.xml introduced through conflict resolution
Change-Id: I404a86702dc26dfcf4b0e8423a0efa617dd3f69d
Reviewed-on: http://gerrit.esdi-community.eu/1932
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.csv.ui/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.csv.ui/plugin.xml
@@ -42,6 +42,7 @@
          <provider
                ref="eu.esdihumboldt.hale.io.csv.reader.lookup">
          </provider>
+      </configPage>
       <configPage
             class="eu.esdihumboldt.hale.io.csv.ui.LookupTablePage"
             order="-4">
